# SealangSharp

./: CMakeLists.txt  README.md  SealangSharp.sln
SealangSharp/: SealangSharp.csproj  sealang.cs
SealangSharp/Properties/: AssemblyInfo.cs
SealangSharpTest/: Program.cs  SealangSharpTest.csproj  main.c
SealangSharpTest/Properties/: AssemblyInfo.cs
nuget/: SealangSharp.nuspec  make_package.bat
sealang/: CMakeLists.txt  sealang.cpp  sealang.h
